[gd_scene load_steps=3 format=3 uid="uid://dp1jg12bwo32"]

[ext_resource type="Script" path="res://Player/Scripts/PlayerCollisionDetect.gd" id="1_kx324"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m02f1"]
size = Vector2(10, 2)

[node name="PlayerCollisionDetect" type="Area2D"]
script = ExtResource("1_kx324")
collisionICD = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_m02f1")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
